some lettering changes

--- a/include/views/default/crunchbutton/frontend/apply.phtml
+++ b/include/views/default/crunchbutton/frontend/apply.phtml
@@ -1,5 +1,5 @@
 <div class="top-pad"></div>
-<div class="content-padding">
+<div class="content-padding drivers-apply">
 	<div class="apply-item-title text-your-order" name="userForm">
 		Driver Application
 	</div>
