--- a/include/views/default/seven/frontend/about.phtml
+++ b/include/views/default/seven/frontend/about.phtml
@@ -1,4 +1,14 @@
 <div class="top-pad"></div>
+<? /* this is just a test thing
+		<div class="stamp-loader">
+			<span ng-lettering class="stamp-loader-lettering" data-lettering="letters">push a button</span>
+			<div class="stamp-loader-button"></div>
+			<div class="stamp-loader-words"></div>
+			
+
+		</div>
+		*/
+?>
 
 <div class="about-bubble-wrap">
 	<div class="bubble-tail bubble-tail-green bubble-animated">
