--- a/include/views/default/seven/frontend/orders.phtml
+++ b/include/views/default/seven/frontend/orders.phtml
@@ -9,9 +9,11 @@
 
 <div ng-show="!orders.list">
 	<div class="content-padding">
-		<h4>Energizing..............</h4>
-		<div class="ajax-loader-teal"></div>
-		<br />
+		<div class="stamp-loader">
+			<div class="stamp-loader-button"></div>
+			<div class="stamp-loader-words"></div>
+		</div>
+		
 	</div>
 </div>
 
