--- a/include/views/default/cockpit2/frontend/communities/communities-form.phtml
+++ b/include/views/default/cockpit2/frontend/communities/communities-form.phtml
@@ -44,6 +44,13 @@
 				</div>
 			</li>
 
+			<li class="li-input" ng-class="{'error':form.communityAutoClose.$invalid}">
+				<div class="label">Enable Auto Close:</div>
+				<div class="input">
+					<select name="communityAutoClose" required ng-model="community.auto_close" ng-options="opt.value as opt.label for opt in yesNo" ></select>
+				</div>
+			</li>
+
 			<li class="li-input" ng-class="{'error':form.communityImage.$invalid}">
 				<div class="label">Custom image:</div>
 				<div class="input">
