display driver's invite code on driver FAQ page #4519

--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -159,7 +159,7 @@ We aim for delivery times under 45 minutes, so do whatever is most efficient!<br
         <b>
             How do I use my invite code and how do I earn extra $$$ with it?
         </b><br>
-Your Personal Invite Code: <strong>{{account.user.invite_code}}</strong>. Get new customers to enter fhkjadsfds in the Notes section of their first order for <strong>${{account.user.referral_customer_credit}}</strong> off and you’ll earn <strong>${{account.user.referral_admin_credit}}</strong> for each person you refer, directly into your bank account!
+Your Personal Invite Code: <strong>{{account.user.invite_code}}</strong>. Get new customers to enter <strong>{{account.user.invite_code}}</strong> in the Notes section of their first order for <strong>${{account.user.referral_customer_credit}}</strong> off and you’ll earn <strong>${{account.user.referral_admin_credit}}</strong> for each person you refer, directly into your bank account!
 <br>
 
         <b>
