added metrics sample

--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -12,6 +12,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.9/angular-animate.min.js"></script>
 
 <script src="//cdn.socket.io/socket.io-1.2.0.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1/Chart.min.js"></script>
 
 <!-- Payment stuff -->
 <? /*
@@ -26,6 +27,7 @@
 <script src="/assets/cockpit/js/angular-hotkeys.min.js"></script>
 <script src="/assets/cockpit/js/angular-google-maps.min.js"></script>
 <script src="/assets/cockpit/js/favico.min.js"></script>
+<script src="/assets/cockpit/js/angular-chart.js"></script>
 
 <script src="/assets/js/snap.js"></script>
 <script src="/assets/js/date.js"></script>
@@ -69,6 +71,7 @@
 <script src="/assets/cockpit/js/controllers.blast.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.tv.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.report.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.metrics.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <!-- AngularJS Filters -->
 <script src="/assets/js/filters.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
@@ -113,4 +116,5 @@
 <script src="/assets/cockpit/js/service.blast.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.tv.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.report.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.metrics.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/angular-cached-resource.min.js?v=<?=Deploy_Server::currentVersion()?>"></script><!--Michal added 1-19-15-->
