--- a/include/views/default/crunchbutton/frontend/apply.phtml
+++ b/include/views/default/crunchbutton/frontend/apply.phtml
@@ -155,7 +155,7 @@
 		</div>
 
 		
-		<button class="button lightorange" ng-click="post()">Submit</button>
+		<button class="button lightorange button-bottom " ng-click="post()">Submit</button>
 		
 	</form>
 </div>
