added back the window.print

--- a/include/views/mail/crunchbutton/order/index.phtml
+++ b/include/views/mail/crunchbutton/order/index.phtml
@@ -208,5 +208,5 @@ if( $this->cockpit_url ) { ?>
 
 
 <?php if ($order->_print) { ?>
-<script>//window.print();</script>
+<script>window.print();</script>
 <?php } ?>
