--- a/include/views/default/seven/frontend/about.phtml
+++ b/include/views/default/seven/frontend/about.phtml
@@ -126,5 +126,5 @@
 		Like food? Like fun? Like beer? Then we want you! Join our young ambitious team in sunny LA!
 	</p>
 	<br>
-	<button class="button lightorange" ng-click="navigation.link('/jobs','push')">Jobs</button>
+	<button class="button lightorange" ng-click="navigation.link('/work','push')">Work with Us</button>
 </div>
