--- a/include/views/default/seven/frontend/owners.phtml
+++ b/include/views/default/seven/frontend/owners.phtml
@@ -55,7 +55,7 @@
 		<div class="owner-icon"><i class="fa fa-check"></i></div>
 		<div class="owner-text">
 			<h4>We're streamlined.</h4>
-			<p>Getting you up and running is as simple as collecting a few pieces of info. We can notify you of orders by fax, phone, text message, email, and/or online system. We pay you by check or bank deposit.</p>
+			<p>Getting you up and running is as simple as collecting a few pieces of info. We can notify you of orders by fax, phone, text message, email, and/or online system, and our own delivery drivers can carry out the deliveries for you. We pay you by check or bank deposit.</p>
 		</div>
 	</div>
 
