--- a/include/views/default/seven/frontend/location.phtml
+++ b/include/views/default/seven/frontend/location.phtml
@@ -71,7 +71,7 @@
 				<div class="divider spacer-one-two"></div>
 
 				<div class="button-pushable">
-					<button class="button orange" ng-click="navigation.link('/jobs','push')"><b>bring crunchbutton to you!</b></button>
+					<button class="button orange" ng-click="navigation.link('/work','push')"><b>bring crunchbutton to you!</b></button>
 				</div>
 
 				
@@ -109,7 +109,7 @@
 	<div class="content-padding">
 		<br /><br /><br />
 		<h4>Order the best local delivery food</h4>
-		<p>We find the top delivery restaurants in your area, curate their menus, and make it easy for you to order with a single click.</p>
+		<p>Crunchbutton lets you order the best food in your area delivered straight to your door. Place an order, and we save it for next time, along with your delivery and payment info. Come back and reorder your favorites with just one click.</p>
 	</div>
 	
 	
@@ -139,9 +139,9 @@
 	<div class="content-padding">
 		<br /><br />
 		<h4>Are you a delivery foodie?</h4>
-		<p>Join our marketing intern program and get a free pink gorilla suit! Also maybe some money too. We are always looking for great people. Developer? Designer? Give us a ring!</p>
+		<p>Join our marketing intern program and get a free pink gorilla suit! Also maybe some money too. We are always looking for great people. Developer? Designer? Give us a ring! Looking to become a Delivery Driver? Apply today!</p>
 		<br />
-		<button class="button lightorange" ng-click="navigation.link('/jobs','push')">Work with us</button>
+		<button class="button lightorange" ng-click="navigation.link('/work','push')">Work with us</button>
 	</div>
 	
 	<div class="content-padding">
@@ -156,13 +156,13 @@
 	
 	<div class="content-padding">
 		<h4>We’re expanding!</h4>
-		<p>We may not be everywhere yet, but the communities we are in love us! Take a look at some of our most popular locations.</p>
+		<p>We may not be everywhere yet, but the communities we are in love us! Browse some of the food from or most popular locations:</p>
 		<br /><br /><br />
-		<div class="popular-locations">
-			<div class="map map-new-haven"></div>
-			<div class="map map-dc"></div>
-			<div class="map map-providence"></div>
-			<div class="map map-venice"></div>
-		</div>
+		<p>
+			<span class="popular-location" ng-repeat="alias in topCommunities">
+				<a href ng-click="openCity(alias.alias)" permalink="{{alias.alias}}">{{alias.name}}</span>
+			</span>
+		</p>
 	</div>
+	<br><br><br>
 </div>
