--- a/include/views/default/crunchbutton/frontend/apply.phtml
+++ b/include/views/default/crunchbutton/frontend/apply.phtml
@@ -77,6 +77,7 @@
 				<div ng-if="errors.phone">Please enter your phone type:</div>
 				<input type="radio" ng-model="apply.phone" name="phone" value="iPhone" id="apply-phone-iphone"><label for="apply-phone-iphone">iPhone</label><br>
 				<input type="radio" ng-model="apply.phone" name="phone" value="Android" id="apply-phone-android"><label for="apply-phone-android">Android</label><br>
+				<input type="radio" ng-model="apply.phone" name="phone" value="Windows" id="apply-phone-windows"><label for="apply-phone-windows">Windows</label><br>
 				<input type="radio" ng-model="apply.phone" name="phone" value="OtherSmartPhone" id="apply-phone-other"><label for="apply-phone-other">Other Smartphone</label><br>
 				<input type="radio" ng-model="apply.phone" name="phone" value="Non-Smartphone" id="apply-phone-dumb"><label for="apply-phone-dumb">Non-Smartphone</label><br>
 			</div>
