--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -246,7 +246,7 @@ html {
 .home-top {
 	background: #90562f url(../images/micro/bg-sandwich.jpg);
 	background-position: top right;
-	background-size: cover;
+	background-size: 200%;
 	padding: 0 0 60px 0;
 	color: #fff;
 }
