--- a/include/views/default/seven/frontend/work.phtml
+++ b/include/views/default/seven/frontend/work.phtml
@@ -36,7 +36,7 @@
 
 	<h4>Community Representative</h4>
 	<p>
-		No one knows more about your college or community than you. You know whats "cool", and that's why we’re going to hire you! Scout for local awesome restaurants to sign up, and play a significant role in orchestrating marketing campaings.
+		No one knows more about your college or community than you. You know what's "cool", and that's why we’re going to work with you! Scout for local awesome restaurants to sign up, and play a significant role in orchestrating marketing campaigns.
 	</p>
 	<br />
 	<a href="mailto:{{reps}}"><button class="button lightorange">join up</button></a>
