--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -2525,6 +2525,17 @@ sup {
 	}
 }
 
+.location-gorillia {
+	background: url(../images/micro/gorillia.svg) no-repeat;
+	background-position: top center;
+	width: 18em;
+	height: 18em;
+	background-size: 100%;
+	margin: 0 auto;
+	margin-top: 5em;
+	margin-bottom: 2em;
+}
+
 .about-green-orange {
 	background: url(../images/micro/about-green-orange.svg) no-repeat;
 	background-position: top center;
