some thankyou page tweaks

--- a/include/views/default/crunchbutton/frontend/thankyou.phtml
+++ b/include/views/default/crunchbutton/frontend/thankyou.phtml
@@ -1,4 +1,8 @@
 <div class="top-pad"></div>
-<div class="restaurant-item-title text-your-order">
-        Thank you, your application has been submitted!
-    </div>
+<div class="content-padding">
+	<h4>Thanks!</h4>
+	<p>Your application has been submitted. We will get back to you soon.</p>
+
+	<br><br>
+	<a href ng-click="navigation.link('/location','push')">Return Home</button>
+</div>
