--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -3663,14 +3663,6 @@ select {
 	-webkit-appearance: menulist-button;
 }
 
-
-.drivers-apply .button-bottom {
-    width: 11em; 
-    background-color:rgb(247, 128, 83);
-    color:white;
-    border-radius:4px;
-    border:none;  
-}
    
 i {
     font-style:italic;
@@ -3758,4 +3750,28 @@ i {
 	content: ", ";
 	padding-right: .2em;
 	padding-left: .1em;
+}
+
+
+@-webkit-keyframes shakeit {
+	0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
+	10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
+	20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
+	30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
+	40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+	50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+	60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+	70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
+	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
+	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
+	100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+.shake {
+	
+	-webkit-animation-name: shakeit;
+	-webkit-animation-duration: 0.8s;
+	-webkit-transform-origin:50% 50%;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-timing-function: linear;
 }
