dynamic display of communities

--- a/include/views/default/seven/frontend/about.phtml
+++ b/include/views/default/seven/frontend/about.phtml
@@ -53,7 +53,7 @@
 		<h2>Executive Chef</h2>
 		<p class="staff-favorite">
 			Fav<span class="staff-orite">orite</span> food: Toro Sushi
-			<br>Fav<span class="staff-orite">orite</span> beer: Matilda
+			<br>Fav<span class="staff-orite">orite</span> beer: La Trappe Quadrupel
 		</p>
 		<p class="staff-content">
 			He builds stuff. Devin’s engineering background stems from his extensive lego building as a child. Best education ever. 
