open link in new window

--- a/include/views/default/crunchbutton/frontend/order.phtml
+++ b/include/views/default/crunchbutton/frontend/order.phtml
@@ -107,7 +107,7 @@
 	<br>
 
 
-	<a href="/printorder/{{ order.uuid }}" target="_blank" class="print-icon"><i class="fa fa-print"></i> Print Receipt</a>
+	<a href="/printorder/{{ order.uuid }}" target="_system" class="print-icon"><i class="fa fa-print"></i> Print Receipt</a>
 
 
 	<div class="divider"></div>
