changed more food button again

--- a/include/views/default/seven/frontend/restaurant.phtml
+++ b/include/views/default/seven/frontend/restaurant.phtml
@@ -150,8 +150,10 @@
 							</li>
 						</ul>
 					</div>
+					
+					<br>
+					<button class="button green" ng-click="fullmenu=0">less food</button>						
 
-					<div class="more-food-link restaurant-items-toggle" ng-click="fullmenu=0">less food</div>
 				</div>
 
 				<div ng-show="!fullmenu">
@@ -170,9 +172,9 @@
 						</ul>
 					</div>
 
-					<p class="center-text">
-						<div class="more-food-link restaurant-items-toggle" ng-click="fullmenu=1">more food</div>
-					</p>
+					<br>
+					<button class="button green" ng-click="fullmenu=1">more food</button>						
+
 
 
 				</div>
