--- a/include/views/default/seven/frontend/restaurant.phtml
+++ b/include/views/default/seven/frontend/restaurant.phtml
@@ -40,6 +40,8 @@
 				</div>
 			</div>
 
+			<div ng-if="restaurant.eta" class="restaurant-message">Delivery estimate: {{restaurant.eta}} minutes</div>
+
 			<div restaurant-is-closed></div>
 
 			<!-- cart -->
