--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -3629,7 +3629,7 @@ select {
 .drivers-apply .form-control {
     -webkit-box-shadow: none;
     box-shadow: none;
-    padding: .2em .5em; 
+    padding: .2em .5em;
     color: #555;
     line-height: 1.4em;
     background-color: #fff;
@@ -3654,13 +3654,13 @@ select {
 
 
 .drivers-apply .button-bottom {
-    width: 11em; 
+    width: 11em;
     background-color:rgb(247, 128, 83);
     color:white;
     border-radius:4px;
-    border:none;  
+    border:none;
 }
-   
+
 i {
     font-style:italic;
     font-weight:300;
@@ -3705,6 +3705,11 @@ i {
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
+.restaurant-message{
+	font-size:1.5em;
+	margin-bottom:.5em;
+}
+
 /*
 @mixin transform($transforms) {
 	-moz-transform: $transforms;
@@ -3739,6 +3744,6 @@ i {
 	transform-origin: bottom center;
 	text-transform: uppercase;
 	font-familt: "Museo Slab";
-	
+
 }
 */
