convert to email field

--- a/include/views/default/seven/frontend/restaurant.phtml
+++ b/include/views/default/seven/frontend/restaurant.phtml
@@ -226,7 +226,7 @@
 
 						<div class="payment-form-group form-group">
 							<i class="fa fa-envelope-o payment-form-icon form-icon form-field"></i>
-							<input ng-focus="softKeyboard($event);" type="text" name="pay-email" tabindex="3" ng-model="order.form.email" class="payment-form-input form-input form-field" placeholder="email">
+							<input ng-focus="softKeyboard($event);" type="email" name="pay-email" tabindex="3" ng-model="order.form.email" class="payment-form-input form-input form-field" placeholder="email">
 						</div>
 
 						<div class="payment-form-group form-group">
