--- a/include/views/default/seven/frontend/about.phtml
+++ b/include/views/default/seven/frontend/about.phtml
@@ -123,7 +123,7 @@
 
 	<p>
 		<br><br>
-		Like food? Like fun? Like beer? Then we want you! Join our young ambitious team in sunny LA!
+		Like food? Like fun? Like beer? Then we want you! Join our young ambitious team in sunny Los Angeles!
 	</p>
 	<br>
 	<button class="button lightorange" ng-click="navigation.link('/work','push')">Work with Us</button>
